--- a/Scribus/scribus/ui/propertiespalette_imagebase.ui
+++ b/Scribus/scribus/ui/propertiespalette_imagebase.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>225</width>
-    <height>617</height>
+    <width>222</width>
+    <height>440</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,6 +25,9 @@
      <property name="sizeConstraint">
       <enum>QLayout::SetFixedSize</enum>
      </property>
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::ExpandingFieldsGrow</enum>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="imagePageNumberLabel">
        <property name="text">
@@ -36,13 +39,6 @@
       <widget class="ScrSpinBox" name="imagePageNumber">
        <property name="specialValueText">
         <string>Auto</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="xposImgLabel">
-       <property name="text">
-        <string>X-Pos:</string>
        </property>
       </widget>
      </item>
@@ -90,6 +86,13 @@
        </property>
       </widget>
      </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="xposImgLabel">
+       <property name="text">
+        <string>X-Pos:</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
@@ -98,6 +101,13 @@
       <string>Scaling</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
+      <item row="5" column="0">
+       <widget class="QLabel" name="imgDPIYLabel">
+        <property name="text">
+         <string>Actual Y-DPI:</string>
+        </property>
+       </widget>
+      </item>
       <item row="6" column="1">
        <widget class="QCheckBox" name="cbProportional">
         <property name="sizePolicy">
@@ -167,22 +177,31 @@
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
-       <widget class="ScrSpinBox" name="imgDpiX"/>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="imgDPIXLabel">
+      <item row="6" column="0">
+       <widget class="QRadioButton" name="frameScale">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
         <property name="text">
-         <string>Actual X-DPI:</string>
+         <string>To Frame Size</string>
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="imgDPIYLabel">
-        <property name="text">
-         <string>Actual Y-DPI:</string>
+      <item row="2" column="3">
+       <spacer name="horizontalSpacer">
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
-       </widget>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>40</width>
+          <height>20</height>
+         </size>
+        </property>
+       </spacer>
       </item>
       <item row="5" column="1">
        <widget class="ScrSpinBox" name="imgDpiY"/>
@@ -222,31 +241,15 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <widget class="QRadioButton" name="frameScale">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
+      <item row="4" column="1">
+       <widget class="ScrSpinBox" name="imgDpiX"/>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="imgDPIXLabel">
         <property name="text">
-         <string>To Frame Size</string>
+         <string>Actual X-DPI:</string>
         </property>
        </widget>
-      </item>
-      <item row="2" column="3">
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>40</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
       </item>
      </layout>
     </widget>
@@ -256,8 +259,8 @@
      <property name="title">
       <string>Color Management</string>
      </property>
-     <layout class="QFormLayout" name="formLayout_2">
-      <item row="0" column="0">
+     <layout class="QVBoxLayout" name="verticalLayout_2">
+      <item>
        <widget class="QLabel" name="inputProfLabel">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -270,7 +273,7 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
+      <item>
        <widget class="QComboBox" name="inputProfiles">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -278,9 +281,15 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>20</width>
+          <height>0</height>
+         </size>
+        </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item>
        <widget class="QLabel" name="renderIntentLabel">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -293,13 +302,19 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="1">
+      <item>
        <widget class="QComboBox" name="renderIntent">
         <property name="sizePolicy">
          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>20</width>
+          <height>0</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -333,6 +348,12 @@
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
+        <property name="minimumSize">
+         <size>
+          <width>10</width>
+          <height>0</height>
+         </size>
+        </property>
        </widget>
       </item>
       <item row="1" column="0">
@@ -355,6 +376,12 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>10</width>
+          <height>0</height>
+         </size>
         </property>
        </widget>
       </item>
